# cpp-cache

./: CMakeLists.txt  README.md
.cache/clangd/index/: LfuCache.h.6F0C1D0A7A2049B8.idx  lfu.test.cpp.4322E987FA24D533.idx
include/: ICachePolicy.h  LfuCache.h  LruCache.h
tests/: lfu.test.cpp
